[ForeignObject] Don't allow <foreignObject> to composite in SPv1 mode.

This reduces the instance of broken content due to the fundamental
compositing bug.

Bug: 844538

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ie8841d3cccf58d4b7760366bb6537cfdb3c55d82
Reviewed-on: https://chromium-review.googlesource.com/1066403
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560094}
Former-commit-id: 1112dc78a874f228a78a7ab4d484e32e46f360f1